tests/NormalTests/paczka2/big_fuzzy/63269210.err
Error in line 1: S915 S903 70,7
Error in line 5: UuAtSj S915 57,5
Error in line 13: ZJED S915 31,1
Error in line 12: UuAtSj S903 30,9
Error in line 18: S915 S807 21,0
Error in line 17: UuAtSj A277 53,7
Error in line 24: avlNe51Ml S903 -1,9
Error in line 19: pOYY6kIK S903 0,5
Error in line 23: avlNe51Ml S903 4,4
Error in line 29: UuAtSj S915 -2,0
Error in line 22: UoP3un9mG9W S807 96,0
Error in line 21: UuAtSj S915 33,5
Error in line 50: ZJED A277 27,1
Error in line 48: avlNe51Ml S903 73,7
Error in line 55: S915 S915 57,9
Error in line 68: UuAtSj S807 23,7
Error in line 65: S915 S903 46,6
Error in line 71: S915 S915 65,0
Error in line 74: pOYY6kIK S915 56,0
Error in line 73: ZJED S915 85,5
Error in line 84: UoP3un9mG9W S903 78,1
Error in line 89: UoP3un9mG9W A277 30,5
Error in line 87: ZJED A277 33,4
Error in line 98: pOYY6kIK A277 13,3
Error in line 105: S915 S903 79,77
Error in line 93: S915 S903 44,5
Error in line 110: UoP3un9mG9W S903 4,5
Error in line 123: UoP3un9mG9W S915 32,9
Error in line 130: S915 S903 97,7
Error in line 145: avlNe51Ml S807 186,3
Error in line 128: UoP3un9mG9W S807 93,2
Error in line 152: S915 S903 31,8
Error in line 147: ZJED S915 15,1
Error in line 150: UoP3un9mG9W A277 17,6
Error in line 169: avlNe51Ml S903 34,4
Error in line 159: ZJED S915 72,0
Error in line 173: ZJED S903 40,0
Error in line 186: avlNe51Ml S807 -2,0
Error in line 196: avlNe51Ml A277 22,0
Error in line 197: avlNe51Ml S903 1,8
Error in line 199: UuAtSj S903 33,0
Error in line 216: S915 S807 73,1
Error in line 217: S915 S903 29,2
Error in line 222: UuAtSj S903 66,8
Error in line 225: UuAtSj S807 95,6
Error in line 226: ZJED A277 99,4
Error in line 248: ZJED S807 96,5
